- Fixes bug with wrong channel report. - Fixes bug with version check look & feel (not showing all the wrong versions due to CSS) - In case of wrong report, an error will be displayed.

--- a/GW3/GWLogger/Less/main.less
+++ b/GW3/GWLogger/Less/main.less
@@ -947,7 +947,7 @@ select
 
 .oldGatewayVersion
 {
-    background-color: #ffa4a4;
+    background-color: #ffa4a4 !important;
 }
 
 .summary
